# localiser

./: .gitignore  AGENTS.md  README.md  pyproject.toml
core/: __init__.py
core/data/: baseline_english_words.txt
core/localiser/: __init__.py  cli.py  engine.py  mcp_server.py  profiles.py  tool_api.py  tool_schemas.py
core/regionaliser/: __init__.py  cli.py  engine.py  mcp_server.py  tool_api.py  tool_schemas.py
core/scripts/: build_db.py  build_skills.py  install_agent_skills.py  install_baseline.py  install_hermes_plugin.py  install_regions.py  install_stanza_models.py  localise.py  localiser_mcp.py  regionalise.py  regionaliser_mcp.py  validate.py
core/templates/: SKILL.md.tpl
docs/: architecture.md  growth-plan.md  layered-profiles.md
plugins/hermes-localiser/: README.md  __init__.py  plugin.yaml
regions/au/: SOURCES.md  manifest.json
regions/au/data/: cultural_quote_references.csv  cultural_references.csv  detection_markers.csv  false_friends.csv  foreign_tropes.csv  generations.csv  institutional_context.csv  lexicon.csv  locale_markers.csv  media_reference_ecology.csv  regions.csv  registers.csv  sociolects.csv  spelling.csv  sports_locality.csv  urban_rural.csv  vocabulary.csv
regions/ca/: SOURCES.md  manifest.json
regions/ca/data/: cultural_quote_references.csv  cultural_references.csv  detection_markers.csv  false_friends.csv  foreign_tropes.csv  generations.csv  lexicon.csv  (+10 more)
regions/uk/: SOURCES.md  manifest.json
regions/us/: SOURCES.md  manifest.json
skills/localiser/: SKILL.md
skills/localiser-light/: SKILL.md
tests/: test_cli.py
(+34 files in other folders)
