[project]
name = "regionaliser"
version = "0.1.0"
description = "Local deterministic English regionalisation CLI/API backed by Regionaliser CSV/SQLite data."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ner = ["stanza>=1.8"]

[project.scripts]
regionalise = "core.regionaliser.cli:main"
regionaliser-mcp = "core.regionaliser.mcp_server:main"

[tool.setuptools]
packages = ["core", "core.regionaliser"]
