[project]
name = "localiser"
version = "0.1.0"
description = "Local deterministic English localisation CLI/API backed by Localiser CSV/SQLite data."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ner = ["stanza>=1.8"]

[project.scripts]
localise = "core.localiser.cli:main"
localiser-mcp = "core.localiser.mcp_server:main"

[tool.setuptools]
packages = ["core", "core.localiser"]

[tool.setuptools.package-data]
core = ["data/*.sqlite"]
